--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -1,8 +1,8 @@
 * Jacques Bertrand 
 
-Born and raised in Paris, Jacques ventured to the south of France at age 19 where, at med school, he developed a fascination with the design of the human body. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency inspires his work in VR. Back in Paris a few years later, he began studying at Ecole Bleue, mastering architectural design and experiencing the world through his deep understanding of the discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation.
+Born and raised in Paris, Jacques ventured to the south of France at age 19 where, at med school, he began viewing the human body as a one of nature's most complex and beautiful designs. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency continues to inspire his work in VR. Back in Paris a few years later, he began studying at Ecole Bleue, mastering architectural design and experiencing the world through his deep understanding of it as a discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation.
 
-In the summer of 2017, Jacques arrived in Brooklyn and quickly became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. Novamedia.nyc features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and extended reality as an emerging market.
+In the summer of 2017, Jacques arrived in Brooklyn and quickly became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. www.novamedia.nyc/ features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and extended reality as an emerging market.
 
 He recently, under the Nova brand name, designed each of the characters for a Google-backed immersive 360 experience called Armonia. Only as XR begins attracting more artists of his caliber will it blossom.
 
@@ -17,9 +17,9 @@ He has been leading media campaigns ever since his time at Purdue, where he wrot
 
 
 * Kyle Kesses
-Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series documenting the rising young players in the organization. 
+Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series documenting the rising young players in the organization. http://m.mlb.com/nyy/video/topic/70621648/v531265383/arizona-fall-league-gary-sanchez 
 
-Inspired by New York's entrepreneurial scene, Kyle sourced his production skills and began his own interview-based show - 15 Minutes. Within the first 18 months of the show, he interviewed a world class aerobatics pilot, a broadway actress, a former major league baseball player, and a gold-medal winning chef. 
+Inspired by New York's entrepreneurial scene, Kyle sourced his production skills and began his own interview-based show - 15 Minutes. Within the first 18 months of the show, he interviewed a world class aerobatics pilot, a broadway actress, a former major league baseball player, and a gold-medal winning chef. https://www.youtube.com/watch?v=TD6bsfgiocg
 
 During extended travel through Latin America, at the start of 2016 he wrote his first manuscript, a 7-part book of short stories, each chapter introducing the reader to characters who are meeting for the first time. The book exists among their homes, minds, and transience as they gain coordination with internal dialogue and exploration of new cultures. 
 
