--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -1,6 +1,6 @@
 * Jacques Bertrand 
 
-Born and raised in Paris, Jacques ventured to the south of France at age 19 where, at med school, he began understanding the human body as a one of nature's most complex and beautiful designs. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency continues to inspire his work in VR. Back in Paris a few years later, he began studying at Ecole Bleue, mastering architectural design and experiencing the world through his deep understanding of it as a discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation.
+Born and raised in Paris, Jacques ventured to the south of France at age 19 where, at med school, he began understanding the human body as a one of nature's most complex and beautiful designs. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency continues to inspire his work in VR. Back in Paris a few years later, he began studying at Ecole Bleue, mastering architectural design and experiencing the world through his deep understanding of design as a discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation.
 
 In the summer of 2017, Jacques arrived in Brooklyn and quickly became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. www.novamedia.nyc/ features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and extended reality as an emerging market.
 
