--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -19,7 +19,7 @@ He has been leading media campaigns ever since his time at Purdue, where he wrot
 * Kyle Kesses
 Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series documenting the rising young players in the organization. http://m.mlb.com/nyy/video/topic/70621648/v531265383/arizona-fall-league-gary-sanchez 
 
-Inspired by New York's entrepreneurial scene, Kyle sourced his production skills and began his own interview-based show - 15 Minutes. Within the first 18 months of the show, he interviewed a world class aerobatics pilot, a broadway actress, a former major league baseball player, and a gold-medal winning chef. https://www.youtube.com/watch?v=TD6bsfgiocg
+Inspired by New York's entrepreneurial scene, Kyle sourced his production skills and began his own interview-based show, Fifteen Minutes. Within the first 18 months of the show, he interviewed a world class aerobatics pilot, a broadway actress, a former major league baseball player, and a gold-medal winning chef. https://www.youtube.com/watch?v=TD6bsfgiocg
 
 During extended travel through Latin America, at the start of 2016 he wrote his first manuscript, a 7-part book of short stories, each chapter introducing the reader to characters who are meeting for the first time. The book exists among their homes, minds, and transience as they gain coordination with internal dialogue and exploration of new cultures. 
 
