--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -17,21 +17,21 @@ He has been leading media campaigns ever since his time at Purdue, where he wrot
 
 
 * Kyle Kesses
-Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series documenting the rising young players in the organization. http://m.mlb.com/nyy/video/topic/70621648/v531265383/arizona-fall-league-gary-sanchez 
+Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series documenting the rise of young players in the organization. http://m.mlb.com/nyy/video/topic/70621648/v531265383/arizona-fall-league-gary-sanchez 
 
 Inspired by New York's entrepreneurial scene, Kyle sourced his production skills and began his own interview-based show, Fifteen Minutes. Within the first 18 months of the show, he interviewed a world class aerobatics pilot, a broadway actress, a former major league baseball player, and a gold-medal winning chef. https://www.youtube.com/watch?v=TD6bsfgiocg
 
-During extended travel through Latin America, at the start of 2016 he wrote his first manuscript, a 7-part book of short stories, each chapter introducing the reader to characters who are meeting for the first time. The book exists among their homes, minds, and transience as they gain coordination with internal dialogue and exploration of new cultures. 
+During extended travel through Latin America, he wrote his first manuscript at the start of 2016. It is a 7-part book of short stories, each chapter introducing characters who are meeting for the first time. The book exists among their homes, minds, and transience as they gain coordination with internal dialogue and exploration of new cultures. 
 
-Returning to New York, Kyle met Joe at the start of 2017 and discovered VR. The experience resonated and sent him on an ensuing research journey through the history of media and the evolution of mass human connectivity. Soon he became Nova's writer and next co-founder, establishing its marketing philosophy and passion for human-to-human connection.
+Returning to New York, Kyle met Joe and discovered VR. The experience resonated and sent him on a research journey through the history of media and the evolution of mass human connectivity. Soon he became Nova's writer and next co-founder, establishing its marketing philosophy and passion for human-to-human connection.
 
-With an affinity for language and voice, Kyle simplifies complex concepts into comprehensive writings, bridging many divides among artists, engineers, and businesses.
+With an affinity for language and voice, Kyle simplifies complex concepts into comprehensive writings and conversations, bridging many divides among artists, engineers, and businesses.
 
 * Thomas Binetruy 
-Thomas introduces an extraordinarily global perspective. Born in Egypt and raised among Paris, Houston, and Dubai, he is natively fluent in French and English. Inspired by 20th century giants like Richard Feynman and Albert Eisnstein, he landed at one of the finest engineering schools in the US, Purdue University.
+Thomas introduces an extraordinarily global perspective. Born in Egypt and raised among Paris, Houston, and Dubai, he is natively fluent in French and English. Inspired by 20th century giants like Richard Feynman and Albert Einstein, he landed at one of the finest engineering schools in the US, Purdue University.
 
-Purdue owns the second most trafficked airport in the state of Indiana, and this is where Thomas earned his degree in aeronautical engineering. He went on to design hydrogen fuel cell prototypes at Zodiac Aerospace before becoming a consultant at Ailancy in Paris.
+Purdue owns the second most trafficked airport in the state of Indiana, and this is where Thomas earned his degree in aeronautical engineering. He went on to design hydrogen fuel cell prototypes at Zodiac Aerospace before consulting at Ailancy in Paris.
 
-Always engrossed in the process and obsessed with how things work, he could not resist the hands-on opportunity when Joe, his former Purdue classmate, shared Nova's incubating business plan in 2017. Immediately, Thomas began sourcing his self-taught coding skills and within a year he had built novamedia.nyc on React, writing the codebase in JavaScript.
+Engrossed in the process and obsessed with how things work, he could not resist the hands-on opportunity when Joe (his former Purdue classmate) shared Nova's incubating business plan in 2017. Immediately, Thomas began sourcing his self-taught coding skills. Within a year he had built novamedia.nyc on React, writing the codebase in JavaScript.
 
-As computer programming continues shifting into 3D, developers like Thomas, with a true engineering background, will lead the way.
+As computer programming continues shifting into 3D, developers like Thomas, with a true engineering background, are leading the way.
