--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -1,10 +1,12 @@
 * Jacques Bertrand 
 
-Born and raised in Paris, Jacques ventured to the south of France at age 19 where, at med school, he began understanding the human body as a one of nature's most complex and beautiful designs. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency continues to inspire his work in VR. Back in Paris a few years later, he began studying at Ecole Bleue, mastering architectural design and experiencing the world through his deep understanding of design as a discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation.
+Born and raised in Paris, Jacques enrolled in medical school, which transported him to the south of France at age 19. Inside those labs is where he first understood the human body as a one of nature's most complex and beautiful designs. The functionality of the lungs, the power of the heart, the connectivity of the muscular system opened new neural pathways for Jacques as a budding designer. 
 
-In the summer of 2017, Jacques arrived in Brooklyn and quickly became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. www.novamedia.nyc/ features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and extended reality as an emerging market.
+Back in Paris a few years later, he began studying at Ecole Bleue, mastering architectural design and experiencing the world through his deep understanding of design as a discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation.
 
-He recently, under the Nova brand name, designed each of the characters for a Google-backed immersive 360 experience called Armonia. Only as XR begins attracting more artists of his caliber will it blossom.
+In the summer of 2017, Jacques arrived in Brooklyn and quickly became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. www.novamedia.nyc features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and extended reality as an emerging market.
+
+He recently, under the Nova brand name, designed each of the characters for a Google-backed immersive 360 experience called Armonia. It will be featured at film festivals across North America in 2019. Only as XR begins attracting more artists of his caliber will it blossom.
 
 * Joe Mecca
 After graduating with a degree in marketing from Purdue University, Joe returned to the northeast to work for Clear Channel as an account executive, selling sponsorships direct to brands. With an average of $1 million in sales per year, Joe led execution of mutli-platform campaigns (events, radio, web, mobile, video) and was the point of contact for clients. His role evolved into innovating tech integrations for programming and commercial content, before departing for extended travel to Europe and the Middle East.
