--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -1,6 +1,6 @@
 * Jacques Bertrand 
 
-Born and raised in Paris, Jacques enrolled in medical school, which transported him to the south of France at age 19. Inside those labs is where he first understood the human body as a one of nature's most complex and beautiful designs. The functionality of the lungs, the power of the heart, the connectivity of the muscular system opened new neural pathways for Jacques as a budding designer. 
+At age 19 Jacques enrolled in medical school and moved from Paris to the south of France. This is where he first understood the human body as a one of nature's most complex and beautiful designs. The functionality of the lungs, the power of the heart, the connectivity of the muscular system opened new neural pathways for Jacques as a budding designer. 
 
 Back in Paris a few years later, he began studying at Ecole Bleue, mastering architectural design and experiencing the world through his deep understanding of design as a discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation.
 
