--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -11,9 +11,9 @@ He recently, under the Nova brand name, designed each of the characters for a Go
 * Joe Mecca
 After graduating with a degree in marketing from Purdue University, Joe returned to the northeast to work for Clear Channel as an account executive, selling sponsorships direct to brands. With an average of $1 million in sales per year, Joe led execution of mutli-platform campaigns (events, radio, web, mobile, video) and was the point of contact for clients. His role evolved into innovating tech integrations for programming and commercial content, before departing for extended travel to Europe and the Middle East.
 
-In 2016 he again returned to New York and tried virtual reality for the first time. Instantly recognizing it as the future of media, Joe began a virtual reality studio, Nova Media, out of his apartment, and without capital. While assembling a team, Nova bootstrapped its business, producing and developing XR software for individuals and multinational brands. Today, Joe and Nova continue to create bleeding edge content from their studio in Red Hook, Brooklyn.
+In 2016 he again returned to New York and tried virtual reality for the first time. Instantly recognizing it as the future of media, He began Nova Media out of his apartment and without capital backing. While assembling a team, Nova bootstrapped its business, producing and developing XR software for individuals and multinational brands. Today Joe and Nova continue to create bleeding edge content from their studio in Red Hook, Brooklyn.
 
-Among the qualities that make Joe a natural fit for the CEO position are his ability to identify talent in others and motivate them to produce for the company within the realm of their skills and interests. Philosophically, his belief in the power of the mind endlessly empowers him to cast a positive outlook through circumstances both bleak and favorable. 
+Among the qualities that make Joe a natural fit for the CEO position are his ability to identify talent in others and motivate them to produce for the company within the realm of their skills and interests. Philosophically, his belief in the power of the mind endlessly empowers him to cast a positive outlook in all circumstances. 
 
 He has been leading media campaigns ever since his time at Purdue, where he wrote for the Greek Newspaper. He went on to be the sales director and publisher, expanding circulation from 6,000 to 17,000 weekly, growing sales from $10,000 in annual revenue to $25,000.
 
