--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -13,9 +13,9 @@ After graduating with a degree in marketing from Purdue University, Joe returned
 
 In 2016 he again returned to New York and tried virtual reality for the first time. Instantly recognizing it as the future of media, he began Nova Media out of his apartment and without capital backing. While assembling a team, Nova bootstrapped its business, producing and developing XR software for individuals and multinational brands. Today, Joe and Nova continue to create bleeding edge content from their studio in Red Hook, Brooklyn.
 
-Among the qualities that make Joe a natural fit for the CEO position are his ability to identify talent in others and motivate them to produce for the company within the realm of their skills and interests. Philosophically, his belief in the power of the mind endlessly empowers him to cast a positive outlook in all circumstances. 
+He is a natural fit for the CEO position, identify talent in others and motivating them to produce for the company within the realm of their skills and interests. Philosophically, his belief in the power of the mind endlessly drives his positive outlook in all circumstances. 
 
-He has been leading media campaigns ever since his time at Purdue, where he wrote for the Greek Newspaper. He went on to be the sales director and publisher, expanding circulation from 6,000 to 17,000 weekly, growing sales from $10,000 in annual revenue to $25,000.
+He has been leading media campaigns since his time at Purdue, where he wrote for the Greek Newspaper. He went on to be the sales director and publisher, expanding circulation from 6,000 to 17,000 weekly, growing sales from $10,000 in annual revenue to $25,000.
 
 
 * Kyle Kesses
