--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -30,7 +30,7 @@ Returning to New York, Kyle met Joe and discovered VR. The experience resonated 
 With an affinity for language and voice, Kyle simplifies complex concepts into comprehensive writings and conversations, bridging many divides among artists, engineers, and businesses.
 
 * Thomas Binetruy 
-Thomas introduces an extraordinarily global perspective. Born in Egypt and raised among Paris, Houston, and Dubai, he is natively fluent in French and English. Inspired by 20th century giants like Richard Feynman and Albert Einstein, he landed at one of the finest engineering schools in the US, Purdue University.
+Thomas introduces an extraordinarily global perspective. Born in Egypt and raised among Paris, Houston, and Dubai, he is natively fluent in French and English. Inspired by 20th century giants like Richard Feynman and Albert Einstein, he gravitated to physics at and landed at one of the finest engineering schools in the US, Purdue University.
 
 Purdue owns the second most trafficked airport in the state of Indiana, and this is where Thomas earned his degree in aeronautical engineering. He went on to design hydrogen fuel cell prototypes at Zodiac Aerospace before consulting at Ailancy in Paris.
 
